--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 <title>Henry Cole</title>
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link href="style-local.css" rel="stylesheet">
+<link href="/style-local.css" rel="stylesheet">
 </head>
 <body>
 <!-- Begin 'Sidebar' Section -->
