--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 <div class="col-xl-3 col-12">
 <div class="sticky-top pt-4"> 
 <img src="/img/henry-profile.jpg" width="250px" class="img-thumbnail rounded img-centre affix" alt="Henry Cole Profile Picture"/>
-<h1 class="text-center display-5 mt-2"><a class="h1" href="/">Henry Cole</a></h1>
+<a class="h1 display-5 mt-2" href="/">Henry Cole</a>
 <p class="text-center lead mt-2">Systems Analyst with 10 years' experience in enterprise IT</p>
 <span class="text-center img-centre">
 <nav class="nav justify-content-center">
