--- a/style-local.css
+++ b/style-local.css
@@ -10,10 +10,10 @@
     max-width: 75%;
 }
 .page-title-link {
-    color: unset;
-    text-decoration: unset;
+    color: inherit;
+    text-decoration: none;
   }
 .page-title-link:hover {
-    color: unset;
-    text-decoration: unset;
+    color: inherit;
+    text-decoration: none;
 }
