--- a/style-local.css
+++ b/style-local.css
@@ -9,11 +9,11 @@
 .card-img-work {
     max-width: 75%;
 }
-.page-title-link {
+.unstyled-link {
     color: inherit;
     text-decoration: none;
   }
-.page-title-link:hover {
+.unstyled-link:hover {
     color: inherit;
     text-decoration: none;
 }
