--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 <div class="col-xl-3 col-12">
 <div class="sticky-top pt-4"> 
 <img src="/img/henry-profile.jpg" width="250px" class="img-thumbnail rounded img-centre affix" alt="Henry Cole Profile Picture"/>
-<h1 class="text-reset display-5 mt-2 text-center"><a class="text-reset display-5 mt-2 text-center" href="/">Henry Cole</a></h1>
+<h1 class="text-reset text-decoration-none display-5 mt-2 text-center"><a href="/">Henry Cole</a></h1>
 <p class="text-center lead mt-2">Systems Analyst with 10 years' experience in enterprise IT</p>
 <span class="text-center img-centre">
 <nav class="nav justify-content-center">
