--- a/_includes/blog_cards.html
+++ b/_includes/blog_cards.html
@@ -5,7 +5,7 @@
         <div class="card-body">
           <h5 class="card-title"><a href="{{ site.baseurl }}{{ post.url }}" class="text-reset text-decoration-none">{{ post.title }}</a></h5>
           <p class="card-text">{{ post.excerpt }}</p>
-          <a href="{{ site.baseurl }}{{ post.url }}" class="btn btn-primary">Read More</a>
+          <a href="{{ site.baseurl }}{{ post.url }}" class="text-muted text-decoration-none">Read More ➔</a>
         </div>
         <div class="card-footer"><small class="text-muted">{{ post.date | date: "%-d %B %Y"}}</small></div>
       </div>
