Changed styling back, added home link on blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="row">
+    <a href="/" class="text-muted text-decoration-none">← Homepage</a>
     <h2>{{ page.title }}</h2>
     {{ content }}
     <div class="date">
