--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
     <a href="/" class="text-muted text-decoration-none">← Homepage</a>
-    <h2>{{ page.title }}</h2>
+    <h2 class="mt-4">{{ page.title }}</h2>
     {{ content }}
     <p class="text-muted">Written on {{ page.date | date: "%B %e, %Y" }}</p>
 </div>
