attempted to scale back image

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="row">
+<div class="row blog-post">
     <a href="/" class="text-muted text-decoration-none">← Homepage</a>
     <h2 class="mt-4">{{ page.title }}</h2>
     {{ content }}
