--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<div class="row blog-post">
+<div class="row">
     <a href="/" class="text-muted text-decoration-none">← Homepage</a>
     <h2 class="mt-4">{{ page.title }}</h2>
-    {{ content }}
+    <p>{{ content }}</p>
     <p class="text-muted">Written on {{ page.date | date: "%B %e, %Y" }}</p>
 </div>
