--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,6 @@ layout: default
 <div class="row">
     <a href="/" class="text-muted text-decoration-none">← Homepage</a>
     <h2 class="mt-4">{{ page.title }}</h2>
-    <p>{{ content }}</p>
+    <div class="post-content">{{ content }}</div>
     <p class="text-muted">Written on {{ page.date | date: "%B %e, %Y" }}</p>
 </div>
