--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,9 +19,9 @@
 <p class="text-center lead mt-2">Systems Analyst with 10 years' experience in enterprise IT</p>
 <span class="text-center img-centre">
 <nav class="nav justify-content-center">
-<a class="nav-link text-secondary" href="#">twitter</a>
-<a class="nav-link text-secondary" href="#">discord</a>
-<a class="nav-link text-secondary" href="#">github</a>
+<a class="nav-link text-secondary" href="/">home</a>
+<a class="nav-link text-secondary" href="/blog.html">blog</a>
+<a class="nav-link text-secondary" href="/#contact">contact</a>
 </nav>
 </span>
 <br/>
