--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="row">
-    <h2 class="mt-4">{{ page.title }}</h2>
+    <h2>{{ page.title }}</h2>
     <div class="post-content">{{ content }}</div>
     <p class="text-muted">Written on {{ page.date | date: "%B %e, %Y" }}</p>
 </div>
