started to change from work history to projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,26 +1,16 @@
 <div class="row row-cols-1 row-cols-lg-2">
     <div class="col-lg-6 col-md-9 mb-3">
     <div class="card h-100 card-work">
-      <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre img-fluid card-img-work" alt="PRS for Music Logo">
       <div class="card-body">
-        <h5 class="card-title">PRS for Music</h5>
-        <h5><small class="text-muted">2019-present</small></h5>
-        <p class="card-text">PRS for Music represents the rights of over 150,000 songwriters & composers.</p>
-        <p class="card-text">I work on supporting and maintaining internal Oracle/Java based applications</p>
-        <span class="badge bg-light text-dark">Oracle Database</span>
-        <span class="badge bg-light text-dark">PL/SQL</span>
-        <span class="badge bg-light text-dark">Java</span>
-        <span class="badge bg-light text-dark">Apache Tomcat</span>
-        <span class="badge bg-light text-dark">Microsoft SQL Server</span>
-        <span class="badge bg-light text-dark">C#</span>
-        <span class="badge bg-light text-dark">IT Service Management</span>
-        <span class="badge bg-light text-dark">Audit</span>
-        <span class="badge bg-light text-dark">Systems Documentation</span>
+        <h5 class="card-title">MatchBox</h5>
+        <h5><small class="text-muted">Identify songs played from analogue music sources</small></h5>
+        <p class="card-text">I use services such as last.fm to collate my music listening history, but it can be a pain to submit manual data for sources such as my record player.</p>
+        <p class="card-text">This project uses external APIs to match what's playing and submit it to various services.</p>
+        <p class="card-text"><a href="#">View Project ➔</a></p>
       </div>
     </div></div>
     <div class="col-lg-6 col-md-9 mb-3">
     <div class="card h-100 card-work">
-      <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre img-fluid card-img-work" alt="Abellio Logo">
       <div class="card-body">
         <h5 class="card-title">Abellio</h5>
         <h5><small class="text-muted">2012-2019</small></h5>
@@ -40,7 +30,6 @@
     </div></div>
     <div class="col-lg-6 col-md-9 mb-3">
     <div class="card h-100 card-work">
-      <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre img-fluid card-img-work" alt="The Windmill Chatham Green Logo">
       <div class="card-body">
         <h5 class="card-title">The Windmill</h5>
         <h5><small class="text-muted">ad-hoc</small></h5>
