--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,41 +6,17 @@
         <h5><small class="text-muted">Identify songs played from analogue music sources</small></h5>
         <p class="card-text">I use services such as last.fm to collate my music listening history, but it can be a pain to submit manual data for sources such as my record player.</p>
         <p class="card-text">This project uses external APIs to match what's playing and submit it to various services.</p>
-        <p class="card-text"><a href="#">View Project ➔</a></p>
+        <a class="text-muted text-decoration-none" href="#">View Project ➔</a>
       </div>
     </div></div>
     <div class="col-lg-6 col-md-9 mb-3">
     <div class="card h-100 card-work">
       <div class="card-body">
-        <h5 class="card-title">Abellio</h5>
-        <h5><small class="text-muted">2012-2019</small></h5>
-        <p class="card-text">Abellio is a public transport operating company which runs rail and bus contracts across the UK and Germany.</p>
-        <p class="card-text">I worked for Abellio for 7 years, mostly doing some things.</p>
-        <span class="badge bg-light text-dark">TCP/IP Networking</span>
-        <span class="badge bg-light text-dark">Active Directory</span>
-        <span class="badge bg-light text-dark">Office 365</span>
-        <span class="badge bg-light text-dark">Azure</span>
-        <span class="badge bg-light text-dark">On-Train WiFi</span>
-        <span class="badge bg-light text-dark">Datacentre Migration</span>
-        <span class="badge bg-light text-dark">Citrix</span>
-        <span class="badge bg-light text-dark">SIP/VOIP Telephony</span>
-        <span class="badge bg-light text-dark">Access Control</span>
-        <span class="badge bg-light text-dark">CCTV Systems</span>
+        <h5 class="card-title">Teltonika Cell Autolock</h5>
+        <h5><small class="text-muted">Monitor connected mobile cell and enforce specific cell ID</small></h5>
+        <p class="card-text">I have a 4G connection which can experience poor speeds if it attaches to the wrong mobile cell.</p>
+        <p class="card-text">This is a simple Python script which runs on Teltonika RUT360 devices and instructs the modem to lock to a specific cell if it is not already doing so.</p>
+        <a class="text-muted text-decoration-none" href="#">View Project ➔</a>
       </div>
     </div></div>
-    <div class="col-lg-6 col-md-9 mb-3">
-    <div class="card h-100 card-work">
-      <div class="card-body">
-        <h5 class="card-title">The Windmill</h5>
-        <h5><small class="text-muted">ad-hoc</small></h5>
-        <p class="card-text">The Windmill is a Michelin award-winning pub restaurant in Essex.</p>
-        <p class="card-text">I operate and maintain the website, as well as running the network & infrastructure e.g. CCTV on-site.</p>
-        <span class="badge bg-light text-dark">TCP/IP Networking</span>
-        <span class="badge bg-light text-dark">WiFi</span>
-        <span class="badge bg-light text-dark">CCTV Systems</span>
-        <span class="badge bg-light text-dark">Wordpress</span>
-        <span class="badge bg-light text-dark">PHP</span>
-        <span class="badge bg-light text-dark">MySQL</span>
-        <span class="badge bg-light text-dark">SIP/VOIP Telephony</span>
-      </div>
-    </div></div></div>
+</div>
