added some margin to blog cards

--- a/_includes/blog_cards.html
+++ b/_includes/blog_cards.html
@@ -1,6 +1,6 @@
 <div class="row row-cols-1 row-cols-md-3">
     {% for post in site.posts %}
-    <div class="col-sm-6">
+    <div class="col-sm-6 mb-3">
       <div class="card h-100">
         <div class="card-body">
           <h5 class="card-title"><a href="{{ site.baseurl }}{{ post.url }}" class="text-reset text-decoration-none">{{ post.title }}</a></h5>
