possible centering fix

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,9 @@
 </nav>
 </span>
 <br/>
+<nav class="nav justify-content-center">
 {% include social_icons.html %}
+</nav>
 </div>
 </div>
 <!-- End 'Sidebar' Section -->
