--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,5 +32,5 @@
 </div>
 <!-- End 'Sidebar' Section -->
 <!-- Main Column -->
-<div class="col-10 col-lg-11 col-xl-8 m-4">
+<div class="col-10 col-lg-11 col-xl-8">
 <!-- Content -->
