force no text decoration on social links

--- a/_includes/social_icons.html
+++ b/_includes/social_icons.html
@@ -1,5 +1,5 @@
 <!-- Twitter -->
-<a href="https://www.twitter.com/henrycole" target="_blank">
+<a class="text-decoration-none" href="https://www.twitter.com/henrycole" target="_blank">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
     <title>Twitter</title>
     <desc>Click to visit my Twitter profile</desc>
@@ -7,7 +7,7 @@
 </svg>
 </a>&nbsp;
 <!-- Instagram -->
-<a href="https://www.instagram.com/henrycole/" target="_blank">
+<a class="text-decoration-none" href="https://www.instagram.com/henrycole/" target="_blank">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
     <title>Instagram</title>
     <desc>Click to visit my Instagram profile</desc>
@@ -15,7 +15,7 @@
 </svg>
 </a>&nbsp;
 <!-- LinkedIn -->
-<a href="https://www.linkedin.com/in/henry-cole-52551823/" target="_blank">
+<a class="text-decoration-none" href="https://www.linkedin.com/in/henry-cole-52551823/" target="_blank">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
     <title>LinkedIn</title>
     <desc>Click to visit my LinkedIn profile</desc>
@@ -23,7 +23,7 @@
 </svg>
 </a>&nbsp;
 <!-- GitHub -->
-<a href="https://github.com/hcuk94" target="_blank">
+<a class="text-decoration-none" href="https://github.com/hcuk94" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
         <title>GitHub</title>
         <desc>Click to visit my GitHub profile</desc>
@@ -31,7 +31,7 @@
     </svg>
 </a>&nbsp;
 <!-- Last.fm -->
-<a href="https://www.last.fm/user/hcuk94" target="_blank">
+<a class="text-decoration-none" href="https://www.last.fm/user/hcuk94" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
         <title>Last.fm</title>
         <desc>Click to visit my Last.fm profile</desc>
