--- a/_includes/blog_cards.html
+++ b/_includes/blog_cards.html
@@ -1,5 +1,5 @@
 <div class="row row-cols-1 row-cols-md-3">
-    {% for post in site.posts %}
+    {% for post in site.posts limit: 4 %}
     <div class="col-sm-6 mb-3">
       <div class="card h-100">
         <div class="card-body">
