added links to projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,21 +2,21 @@
     <div class="col-lg-6 col-md-9 mb-3">
     <div class="card h-100 card-work">
       <div class="card-body">
-        <h5 class="card-title">MatchBox</h5>
+        <h5 class="card-title"><a class="text-muted text-decoration-none" href="https://github.com/hcuk94/matchbox"></a>MatchBox</a></h5>
         <h6><small class="text-muted">Identify songs played from analogue music sources</small></h6>
         <p class="card-text">I use services such as last.fm to collate my music listening history, but it can be a pain to submit manual data for sources such as my record player.</p>
         <p class="card-text">This project uses external APIs to match what's playing and submit it to various services.</p>
-        <a class="text-muted text-decoration-none" href="#">View Project ➔</a>
+        <a class="text-muted text-decoration-none" href="https://github.com/hcuk94/matchbox">View Project ➔</a>
       </div>
     </div></div>
     <div class="col-lg-6 col-md-9 mb-3">
     <div class="card h-100 card-work">
       <div class="card-body">
-        <h5 class="card-title">Teltonika Cell Autolock</h5>
+        <h5 class="card-title"><a class="text-reset text-decoration-none" href="https://github.com/hcuk94/teltonika-cell-autolock">Teltonika Cell Autolock</a></h5>
         <h6><small class="text-muted">Monitor connected mobile cell and enforce specific cell ID</small></h6>
         <p class="card-text">I have a 4G connection which can experience poor speeds if it attaches to the wrong mobile cell.</p>
         <p class="card-text">This is a simple Python script which runs on Teltonika RUT360 devices and instructs the modem to lock to a specific cell if it is not already doing so.</p>
-        <a class="text-muted text-decoration-none" href="#">View Project ➔</a>
+        <a class="text-muted text-decoration-none" href="https://github.com/hcuk94/teltonika-cell-autolock">View Project ➔</a>
       </div>
     </div></div>
 </div>
