fixed an issue with a closing tag

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,7 @@
     <div class="col-lg-6 col-md-9 mb-3">
     <div class="card h-100 card-work">
       <div class="card-body">
-        <h5 class="card-title"><a class="text-muted text-decoration-none" target="_blank" href="https://github.com/hcuk94/matchbox"></a>MatchBox</a></h5>
+        <h5 class="card-title"><a class="text-muted text-decoration-none" target="_blank" href="https://github.com/hcuk94/matchbox">MatchBox</a></h5>
         <h6><small class="text-muted">Identify songs played from analogue music sources</small></h6>
         <p class="card-text">I use services such as last.fm to collate my music listening history, but it can be a pain to submit manual data for sources such as my record player.</p>
         <p class="card-text">This project uses external APIs to match what's playing and submit it to various services.</p>
