--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 </div>
-<br/><br/>
+<footer class="footer text-center">
 <p class="text-center text-muted">© Copyright 2022 Henry Cole</p>
+</footer>
 </div>
 </div>
 </body>
