--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 </div>
-<footer class="footer text-center">
+<footer class="footer text-center" style="height:100px; margin-top: 50px;">
 <p class="text-center text-muted">© Copyright 2022 Henry Cole</p>
 </footer>
 </div>
