image optimisation for profile picture

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 <div class="row">
 <div class="col-xl-3 col-12">
 <div class="sticky-top pt-4"> 
-<img src="/img/henry-profile.jpg" width="250px" class="img-thumbnail rounded img-centre affix" alt="Henry Cole Profile Picture"/>
+<img src="/img/henry-profile.webp" width="250px" height="250px" class="img-thumbnail rounded img-centre affix" alt="Henry Cole Profile Picture"/>
 <h1 class="display-5 mt-2 text-center"><a class="text-reset text-decoration-none" href="/">Henry Cole</a></h1>
 <p class="text-center lead mt-2">Systems Analyst with 10 years' experience in enterprise IT</p>
 <span class="text-center img-centre">
