--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -1,3 +1,23 @@
+{% if page.comments == true %}
+  <section class="post__comments">
+    {% if site.repository and site.staticman.branch %}
+      {% if site.data.comments[page.slug] %}
+        <!-- Start static comments -->
+        <div id="comments" class="js-comments">
+          <h3 class="tile__header">Comments</h3>
+          {% assign comments = site.data.comments[page.slug] | sort %}
+          {% for comment in comments %}
+            {% assign avatar = comment[1].avatar %}
+            {% assign email = comment[1].email %}
+            {% assign name = comment[1].name %}
+            {% assign url = comment[1].url %}
+            {% assign date = comment[1].date %}
+            {% assign message = comment[1].message %}
+            {% include comment.html index=forloop.index avatar=avatar email=email name=name url=url date=date message=message %}
+          {% endfor %}
+        </div>
+        <!-- End static comments -->
+      {% endif %}
 <!--
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 -->
@@ -80,4 +100,7 @@
       });
     }
     </script>
-  <!-- End new comment form -->
+  <!-- End comment form -->
+  {% endif %}
+</section>
+{% endif %}
