--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -74,7 +74,7 @@
       let formData = new FormData(form);
       let params = new URLSearchParams(formData).toString();
     
-      fetch('https://staticman.henrycole.uk/v3/entry/github/hcuk94/henry-personal-website/main/comments', {
+      fetch('{STATICMAN_BASE_URL}/v3/entry/{GIT_PROVIDER}/{GIT_PROVIDER_USERNAME}/{REPO}/{BRANCH}', {
         method: 'post',
         credentials: 'include',
         headers: {
