--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -74,7 +74,7 @@
       let formData = new FormData(form);
       let params = new URLSearchParams(formData).toString();
     
-      fetch('{STATICMAN_BASE_URL}/v3/entry/{GIT_PROVIDER}/{GIT_PROVIDER_USERNAME}/{REPO}/{BRANCH}', {
+      fetch('{site.staticman.base_url}/v3/entry/{site.staticman.git_provider}/{site.staticman.git_provider_username}/{site.staticman.repo}/{site.staticman.branch}', {
         method: 'post',
         credentials: 'include',
         headers: {
