--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,6 +1,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 <article id="comment{{ include.index }}" class="js-comment comment card" itemprop="comment" itemscop itemtype="http://schema.org/Comment">
+    <div class="container">
+        <div class="row">
+            <div class="col">
     <div class="comment__avatar-wrapper">
       {% if include.avatar %}
         <img class="comment__avatar" src="{{ include.avatar }}" alt="{{ include.name }}" height="50" width="50">
@@ -8,22 +11,27 @@
         <img class="comment__avatar" src="https://www.gravatar.com/avatar/{{ include.email }}?d=mm&s=50" srcset="https://www.gravatar.com/avatar/{{ include.email }}?d=mm&s=100 2x" alt="{{ include.name }}" height="50" width="50">
       {% endif %}
     </div>
+</div>
+<div class="col">
     <div class="comment__content-wrapper">
       <h5 class="comment__author card-title" itemprop="author" itemscope itemtype="http://schema.org/Person">
         {% unless include.url == blank %}
-          <a rel="nofollow" href="{{ include.url }}"><span itemprop="name">{{ include.name }}</span></a>
+          <a rel="nofollow" href="{{ include.url }}" class="text-decoration-none text-reset"><span itemprop="name">{{ include.name }}</span></a>
         {% else %}
           <span itemprop="name">{{ include.name }}</span>
         {% endunless %}
       </h5>
       <h6 class="comment__date card-subtitle mb-2 text-muted">
         {% if include.date %}
-          {% if include.index %}<a href="#comment{{ include.index }}" itemprop="url">{% endif %}
+          {% if include.index %}<a href="#comment{{ include.index }}" itemprop="url" class="text-decoration-none text-reset">{% endif %}
           <time datetime="{{ include.date | date_to_xmlschema }}" itemprop="datePublished">{{ include.date | date: "%B %d, %Y at %I:%M %p" }}</time>
           {% if include.index %}</a>{% endif %}
         {% endif %}
           </h6>
+        </div>
+
       <p itemprop="text" class="card-text">{{ include.message | markdownify }}</p>
+        </div>
+    </div>
     </div>
   </article>
-  
