--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -16,9 +16,7 @@
         </div>
         <!-- End static comments -->
       {% endif %}
-<!--
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
--->
+<h4>Leave a Comment</h4>
 <form id="comment-form" method="post" action="{{ site.staticman.endpoint }}{{ site.repository }}/{{ site.staticman.branch }}">
     <div class="mb-3">
         <fieldset>
