--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -1,7 +1,7 @@
   <section class="post__comments">
       {% if site.data.comments[page.slug] %}
         <!-- Start static comments -->
-        <div id="comments" class="js-comments">
+        <div id="comments" class="js-comments mb-4">
           <h3 class="tile__header">Comments</h3>
           {% assign comments = site.data.comments[page.slug] | sort %}
           {% for comment in comments %}
