more styling for comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="row">
+<div class="row mb-4">
     <h2>{{ page.title }}</h2>
     <div class="post-content">{{ content }}</div>
     <p class="text-muted">Written on {{ page.date | date: "%B %e, %Y" }}</p>
