more comment testing

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -10,7 +10,7 @@
                 {% endif %}
                 </div>
             </div>
-            <div class="col">
+            <div class="col-auto">
                 <div class="comment__content-wrapper">
                 <h5 class="comment__author card-title" itemprop="author" itemscope itemtype="http://schema.org/Person">
                     {% unless include.url == blank %}
