bootstrap grid fiddling

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,7 +1,7 @@
 <article id="comment{{ include.index }}" class="js-comment comment card" itemprop="comment" itemscop itemtype="http://schema.org/Comment">
     <div class="container my-4">
         <div class="row">
-            <div class="col-md-1">
+            <div class="col">
                 <div class="comment__avatar-wrapper">
                 {% if include.avatar %}
                     <img class="comment__avatar" src="{{ include.avatar }}" alt="{{ include.name }}" height="50" width="50">
@@ -10,7 +10,7 @@
                 {% endif %}
                 </div>
             </div>
-            <div class="col-md-auto">
+            <div class="col">
                 <div class="comment__content-wrapper">
                 <h5 class="comment__author card-title" itemprop="author" itemscope itemtype="http://schema.org/Person">
                     {% unless include.url == blank %}
