--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,7 +1,7 @@
 <article id="comment{{ include.index }}" class="js-comment comment card" itemprop="comment" itemscop itemtype="http://schema.org/Comment">
     <div class="container my-4">
         <div class="row">
-            <div class="col">
+            <div class="col-1">
                 <div class="comment__avatar-wrapper">
                 {% if include.avatar %}
                     <img class="comment__avatar" src="{{ include.avatar }}" alt="{{ include.name }}" height="50" width="50">
