added top margin on card

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,5 @@
 <article id="comment{{ include.index }}" class="js-comment comment card m-4" itemprop="comment" itemscop itemtype="http://schema.org/Comment">
-    <div class="container my-">
+    <div class="container mt-4">
         <div class="row">
             <div class="col-2 col-md-1">
                 <div class="comment__avatar-wrapper">
