--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -70,7 +70,7 @@
       let formData = new FormData(form);
       let params = new URLSearchParams(formData).toString();
     
-      fetch('{{site.staticman.base_url}}/v2/entry/{{site.staticman.git_provider}}/{{site.staticman.git_provider_username}}/{{site.staticman.repo}}/{{site.staticman.branch}}', {
+      fetch('{{site.staticman.base_url}}/v2/entry/{{site.staticman.git_provider}}/{{site.staticman.git_provider_username}}/{{site.staticman.repo}}/{{site.staticman.branch}}/comments', {
         method: 'post',
         credentials: 'include',
         headers: {
