--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -53,7 +53,7 @@
         <fieldset>
         <button type="submit" id="comment-form-submit" class="btn btn-secondary">Submit Comment</button>
         </fieldset>
-        <div role="progressbar" id="comment-form-submitting" hidden><img src="/img/spinner.gif" style="display: inline;" alt="loading spinner" /></div>
+        <div role="progressbar" id="comment-form-submitting" hidden><img width="50px" height="50px" src="/img/spinner.gif" style="display: inline;" alt="loading spinner" /></div>
     </div>
     <!-- Comment form response messages -->
     <div id="comment-form-success" class="alert alert-success" hidden>Thank you for your comment. It will be visible on this page in a few minutes' time..</div>
