--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -66,7 +66,8 @@
       let form = document.getElementById('comment-form');
 
       form.hidden = true;
-    
+      document.getElementById('comment-form-success').hidden = true;
+      document.getElementById('comment-form-error').hidden = true;
       document.getElementById('comment-form-submitting').hidden = false;
     
       let formData = new FormData(form);
@@ -93,6 +94,7 @@
         console.log(err);
         document.getElementById('comment-form-submitting').hidden = true;
         document.getElementById('comment-form-error').hidden = false;
+        form.hidden = false;
       });
     }
     </script>
