--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -57,7 +57,7 @@
   </form>
     <!-- Comment form response messages -->
     <div role="progressbar" id="comment-form-submitting" hidden><img width="50px" height="50px" src="/img/spinner.gif" style="display: inline;" alt="loading spinner" /></div>
-    <div id="comment-form-success" class="alert alert-success" hidden>Thank you for your comment. It will be visible on this page in a few minutes' time..</div>
+    <div id="comment-form-success" class="alert alert-success" hidden>Thank you for your comment. It will be visible on this page in a few minutes' time.</div>
     <div id="comment-form-error" class="alert alert-danger" hidden>Sorry, there was an error with your submission.</strong> Please make sure all required fields have been completed and try again.</div>
   <script>
     document.getElementById('comment-form').onsubmit = e => {
