--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -17,6 +17,7 @@
         <!-- End static comments -->
       {% endif %}
 <h3>Leave a Comment</h3>
+<p>You can leave a comment below, or alternatively <a href="/#contact" >get in touch with me direct</a> if you'd prefer.</p>
 <form id="comment-form" method="post" action="{{ site.staticman.endpoint }}{{ site.repository }}/{{ site.staticman.branch }}">
     <div class="mb-3">
         <fieldset>
