more link styling fixes

--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -17,7 +17,7 @@
         <!-- End static comments -->
       {% endif %}
 <h3>Leave a Comment</h3>
-<p>You can leave a public comment below, or alternatively <a href="/#contact" class="text-reset text-decoration-none text-muted">get in touch with me direct</a> if you'd prefer.</p>
+<p>You can leave a public comment below, or alternatively <a href="/#contact" class="text-decoration-none text-muted">get in touch with me direct</a> if you'd prefer.</p>
 <form id="comment-form" method="post" action="{{ site.staticman.endpoint }}{{ site.repository }}/{{ site.staticman.branch }}">
     <div class="mb-3">
         <fieldset>
