--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,8 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link href="/css/style-local.css" rel="stylesheet">
+<!-- Plausible Analytics -->
+<script defer data-domain="henrycole.uk" src="https://plausible.io/js/plausible.js"></script>
 {% seo %}
 </head>
 <body>
