surely this won't work

--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -1,9 +1,9 @@
   <!-- Comments Block -->
   <section class="post__comments">
-      {% if site.data.comments-staging[page.slug] %}
+      {% if site.data.comments{% if site.branch != "main" %}-{{ site.branch }}{% endif %}[page.slug] %}
         <div id="comments" class="js-comments mb-4">
           <h3 class="tile__header">Comments</h3>
-          {% assign comments = site.data.comments-staging[page.slug] | sort %}
+          {% assign comments = site.data.comments{% if site.branch != "main" %}-{{ site.branch }}{% endif %}[page.slug] | sort %}
           {% for comment in comments %}
             {% assign email = comment[1].email %}
             {% assign name = comment[1].name %}
