--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -1,7 +1,7 @@
   <!-- Comments Block -->
   <section class="post__comments">
-    {% if site.branch != "main" %}
-     {% assign path = site.data.comments-{{ site.branch }}[page.slug] %}
+    {% if site.branch == "staging" %}
+     {% assign path = site.data.comments-staging[page.slug] %}
     {% else %}
     {% assign path = site.data.comments[page.slug] %}
     {% endif %}
