--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -23,7 +23,7 @@
 <!-- Leave a Comment Form -->
 <h3>Leave a Comment</h3>
 <p>You can leave a public comment below, or alternatively <a href="/#contact" class="text-decoration-none text-muted">get in touch with me direct</a> if you'd prefer.</p>
-<form id="comment-form" method="post" action="{{ site.staticman.endpoint }}{{ site.repository }}/{{ site.staticman.branch }}">
+<form id="comment-form" method="post" action="{{site.staticman.base_url}}/v2/entry/{{site.staticman.git_provider_username}}/{{site.staticman.repo}}/{{site.branch}}/comments{% if site.branch != "main" %}-{{ site.branch }}{% endif %}">
     <div class="mb-3">
         <fieldset>
         <label class="form-label" for="comment-form-name">Name</label>
