added note for when comments are turned off

--- a/_includes/post_comments.html
+++ b/_includes/post_comments.html
@@ -107,5 +107,10 @@
       });
     }
     </script>
+{% else %}
+<p class="text-center mt-3"><small>
+  Comments are turned off for this post, but please do <a href="/#contact" class="text-decoration-none text-muted">get in touch directly</a> if 
+  you've any comments or questions.
+</small></p>
 {% endif %}
 </section>
