updated refs to script

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -15,7 +15,7 @@
         <h5 class="card-title"><a class="text-reset text-decoration-none" target="_blank" href="https://github.com/hcuk94/teltonika-cell-autolock">Teltonika Cell Autolock</a></h5>
         <h6><small class="text-muted">Monitor connected mobile cell and enforce specific cell ID</small></h6>
         <p class="card-text">I have a 4G connection which can experience poor speeds if it attaches to the wrong mobile cell.</p>
-        <p class="card-text">This is a simple Python script which runs on Teltonika RUT360 devices and instructs the modem to lock to a specific cell if it is not already doing so.</p>
+        <p class="card-text">This is a simple shell script which runs on Teltonika RUT360 devices and instructs the modem to lock to a specific cell if it is not already doing so.</p>
         <a class="text-muted text-decoration-none" href="https://github.com/hcuk94/teltonika-cell-autolock">View Project ➔</a>
       </div>
     </div></div>
