--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 </div>
 <footer class="footer text-center" style="height:40px; margin-top: 50px;">
-<p class="text-center text-muted">© Copyright 2022 Henry Cole. Icons by <a href="https://iconmonstr.com" target="_blank">iconmonstr</a>.</p>
+<p class="text-center text-muted">© Copyright 2022 Henry Cole. Icons by <a class="text-muted text-decoration-none" href="https://iconmonstr.com" target="_blank">iconmonstr</a>.</p>
 </footer>
 </div>
 </div>
