update analytics provider

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,1 +1,1 @@
-<script defer data-domain="henrycole.uk" src="https://plausible.io/js/plausible.js"></script>
+<script defer data-domain="henrycole.uk" src="https://analytics.dustyservers.com/js/script.js"></script>
