light tweaks to wording

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 <div class="sticky-top pt-4"> 
 <img src="{% if site.branch == "main" %}/img/henry-profile.webp{% else %}/img/henry-profile.staging.webp{% endif %}" width="250px" height="250px" class="img-thumbnail rounded img-centre affix" alt="Henry Cole Profile Picture"/>
 <h1 class="display-5 mt-2 text-center"><a class="text-reset text-decoration-none" href="/">Henry Cole</a></h1>
-<p class="text-center lead mt-2">Systems Engineer with 10+ years' experience in enterprise IT</p>
+<p class="text-center lead mt-2">Systems Engineer with 10+ years' experience in enterprise IT & security</p>
 <span class="text-center img-centre">
 <nav class="nav justify-content-center">
 <a class="nav-link text-secondary" href="/">home</a>
