--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,1 +1,6 @@
-<script defer data-domain="henrycole.uk" src="https://analytics.dustyservers.com/js/script.js"></script>
+<!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://analytics.dustyservers.com/js/pa-IuTBQHgMEyyxsYwMYY92Z.js"></script>
+<script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+</script>
